--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="content">
       <div class="top-header">
         <div class="logo">
-          <figure><img src="../images/logo.svg" alt="" /></figure>
+          <figure><img src="./images/logo.svg" alt="" /></figure>
         </div>
 
         <nav>
