--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
     <main class="content">
       <section class="sponsors">
         <div class="sponsors-single">
-          <figure><img src="../images/client-01.svg" alt="" /></figure>
+          <figure><img src="./images/client-01.svg" alt="" /></figure>
         </div>
         <div class="sponsors-single">
-          <figure><img src="../images/client-02.svg" alt="" /></figure>
+          <figure><img src="./images/client-02.svg" alt="" /></figure>
         </div>
         <div class="sponsors-single">
-          <figure><img src="../images/client-04.svg" alt="" /></figure>
+          <figure><img src="./images/client-04.svg" alt="" /></figure>
         </div>
         <div class="sponsors-single">
-          <figure><img src="../images/client-08.svg" alt="" /></figure>
+          <figure><img src="./images/client-08.svg" alt="" /></figure>
         </div>
         <div class="sponsors-single">
-          <figure><img src="../images/client-09.svg" alt="" /></figure>
+          <figure><img src="./images/client-09.svg" alt="" /></figure>
         </div>
       </section>
 
@@ -197,7 +197,7 @@
 
         <div class="banner-about">
           <div class="banner-item full-width">
-            <figure><img src="../images/feature-image-01.png" alt="" /></figure>
+            <figure><img src="./images/feature-image-01.png" alt="" /></figure>
             <div class="description-banner-about">
               <h3>Otimização</h3>
               <p>
@@ -210,7 +210,7 @@
             </div>
           </div>
           <div class="banner-item sixty-percent">
-            <figure><img src="../images/feature-image-02.png" alt="" /></figure>
+            <figure><img src="./images/feature-image-02.png" alt="" /></figure>
             <div class="description-banner-about">
               <h3>Otimização</h3>
               <p>
@@ -220,7 +220,7 @@
             </div>
           </div>
           <div class="banner-item forty-percent">
-            <figure><img src="../images/feature-image-03.png" alt="" /></figure>
+            <figure><img src="./images/feature-image-03.png" alt="" /></figure>
             <div class="description-banner-about">
               <h3>Otimização</h3>
               <p>
@@ -326,7 +326,7 @@
         </div>
 
         <figure>
-          <img src="../images/feature-image-04.png" alt="" />
+          <img src="./images/feature-image-04.png" alt="" />
         </figure>
       </section>
 
@@ -342,7 +342,7 @@
 
         <div class="box-problems-wraper">
           <div class="box-problems">
-            <figure><img src="../images/carousel-icon-01.svg" alt="" /></figure>
+            <figure><img src="./images/carousel-icon-01.svg" alt="" /></figure>
             <h2>Anonimo</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti
@@ -350,7 +350,7 @@
             <span>Saiba mais <i class="fa-solid fa-arrow-right"></i></span>
           </div>
           <div class="box-problems">
-            <figure><img src="../images/carousel-icon-02.svg" alt="" /></figure>
+            <figure><img src="./images/carousel-icon-02.svg" alt="" /></figure>
             <h2>Anonimo</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti
@@ -358,7 +358,7 @@
             <span>Saiba mais <i class="fa-solid fa-arrow-right"></i></span>
           </div>
           <div class="box-problems">
-            <figure><img src="../images/carousel-icon-03.svg" alt="" /></figure>
+            <figure><img src="./images/carousel-icon-03.svg" alt="" /></figure>
             <h2>Anonimo</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti
@@ -602,11 +602,11 @@
       <section class="develops">
         <div class="develops-wraper">
           <figure>
-            <img src="../images/joaototoso.png" alt="" />
+            <img src="./images/joaototoso.png" alt="" />
             <figcaption>João</figcaption>
           </figure>
           <figure>
-            <img src="../images/gigantinho.png" alt="" />
+            <img src="./images/gigantinho.png" alt="" />
             <figcaption>Gledson</figcaption>
           </figure>
         </div>
@@ -670,7 +670,7 @@
     <footer>
       <div class="logo-footer">
         <figure>
-          <img src="../images/logo.svg" alt="" />
+          <img src="./images/logo.svg" alt="" />
         </figure>
         <span>&copy Securiticaba - Todos os dados reservados</span>
 
